--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,6 +22,7 @@
     <h1><a href="/">Programmer News</a></h1>
     <span id="user"><%= session[:user] %></span>
     <nav>
+      <a href="/submit">submit</a>
       <a href="">profile</a>
       <a href="/login">login</a>
       <a href="/signout">signout</a>
