--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>@post.title</h2>
+  <h2><%= @post.title %></h2>
 
   <% @comments.each do |comment| %>
     <div class="comment">
