--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,7 +23,7 @@
     <span id="user"><%= session[:user] %></span>
     <nav>
       <a href="/submit">submit</a>
-      <a href="">profile</a>
+      <a href="/profile">profile</a>
       <a href="/login">login</a>
       <a href="/signout">signout</a>
     </nav>
