--- a/app/views/comments.erb
+++ b/app/views/comments.erb
@@ -2,7 +2,7 @@
 
   <h2><a href="/profile/<%= @user.id %>"><%= @user.username %></a></h2>
   <% @comments.each do |comment| %>
-    <% post = comment.post %>
+    <% post = Post.find(comment.post_id) %>
     <div class="comment">
       <span class="post"><a href="/post/#{post.id}"><%= post.title %></a></span>
       <p class="content"><%= comment.content %></p>
