--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,9 +2,9 @@
   <% @posts.each_with_index do |post, i| %>
     <% user = post.user %>
     <div class="post">
-      <a href="<%= post.link %>">
-        <h2><%= (i + 1).to_s + ". " + post.title %></h2>
-      </a>
+      <h2>
+        <a href="<%= post.link %>"><%= (i + 1).to_s + ". " + post.title %></a>
+      </h2>
       Posted by <span class="user"><a href="/profile/<%= user.id %>"><%= user.username %></a></span>
       <span class="comments"><a href="/post/<%= post.id %>"><%= post.comments.size %> comments</a></span>
     </div>
