--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,15 +1,15 @@
 <div class="container">
   <form id="login" action="/login" method="post">
     <h2>Login</h2>
-    <input name="username" type="text" required>
-    <input name="password" type="password" required>
+    <input name="username" type="text" placeholder="username" required>
+    <input name="password" type="password" placeholder="password" required>
     <input type="submit" value="submit">
   </form>
 
   <form id="signup" action="/signup" method="post">
     <h2>Sign Up</h2>
-    <input name="username" type="text" required>
-    <input name="password" type="password" required>
+    <input name="username" type="text" placeholder="username" required>
+    <input name="password" type="password" placeholder="password" required>
     <input type="submit" value="submit">
   </form>
 </div>
