--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -10,7 +10,7 @@
   <div class="comments">
     <% @comments.each do |comment| %>
       <div class="comment">
-        <span class="commenter"><%= comment.user.username %></span>
+        <span class="commenter"><a href="/profile/<%= comment.user.id%>"><%= comment.user.username %></a></span>
         <p class="content"><%= comment.content %></p>
       </div>
     <% end %>
