--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,9 +1,107 @@
+body, a {
+  color: #444;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #222;
+}
+
 .container {
   margin: 20px auto;
   width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+  padding: 20px 20px 20px 20px;
+  border: 1px solid silver;
 }
-th {
-  text-align: left;
+
+/*layout*/
+header {
+  background-color: teal;
+  padding: 10px;
+  height: 40px;
+  overflow: auto;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
+}
+
+#banner {
+  height: 40px;
+  float: left;
+}
+
+h1 {
+  margin: 0;
+}
+
+nav {
+  float: right;
+  height: 40px;
+}
+
+nav ul {
+  margin: 11px 0;
+  padding: 0;
+}
+
+nav li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 5px;
+}
+
+#profile {
+  font-style: oblique;
+}
+
+.messages {
+  background-color: #ffb22e;
+  text-align: center;
+  margin: 10px 0;
+}
+
+/*index*/
+.post {
+  margin: 10px 0;
+  font-size: 12px;
+}
+
+.post h2 {
+  margin: 2px 0;
+  font-size: 16px;
+}
+
+.post h2 a {
+  color: #222;
+  text-decoration: none;
+}
+
+/*post*/
+#comment h3 {
+  margin: 0;
+}
+
+textarea[name="content"] {
+  width: 596px;
+  height: 120px;
+  margin: 10px auto;
+}
+
+.comments {
+  margin: 40px 20px 0 0;
+}
+
+.comment {
+  margin: 10px 0;
+}
+
+.commenter a {
+  font-size: 12px;
+  color: #888;
+}
+
+.content {
+  font-size: 14px;
+  margin: 2px 0;
 }
